--- a/app/views/matchers/index.html.haml
+++ b/app/views/matchers/index.html.haml
@@ -11,6 +11,8 @@
 %table.table.table-bordered.table-striped.table-hover
   .thead
     %th{:style=>'text-align:left; background-color: lightblue;'}
+      Type
+    %th{:style=>'text-align:left; background-color: lightblue;'}
       Matcher Name
     %th{:style=>'text-align:left; background-color: lightblue;'}
       Scenario
@@ -22,6 +24,8 @@
   .tbody
     - @matchers.each do |matcher|
       %tr
+        %td{:style=>'text-align:left;'}
+          = matcher.matcher_type
         %td{:style=>'text-align:left;'}
           = matcher.name
         %td{:style=>'text-align:left;'}
